# BAD-Gaussians

./: .gitignore  README.md  pyproject.toml
bad_gaussians/: bad_camera_optimizer.py  bad_config_dataparser.py  bad_config_method.py  bad_gaussians.py  bad_losses.py  bad_utils.py  bad_viewer.py  deblur_nerf_dataparser.py  image_restoration_dataloader.py  image_restoration_dataparser.py  image_restoration_full_image_datamanager.py  image_restoration_model_common.py  image_restoration_pipeline.py  image_restoration_trainer.py  spline.py  spline_functor.py
scripts/: export_poses_from_ckpt.py  export_poses_from_colmap.py  interpolate_traj.py  kitti_to_tum.py
scripts/tools/: export_poses_from_ckpt.py  export_poses_from_colmap.py  export_poses_from_npy.py  interpolate_traj.py  tum_to_kitti.py
tests/: test_spline.py
tests/data/: traj.txt
